--- a/FlappyThing/Packages/manifest.json
+++ b/FlappyThing/Packages/manifest.json
@@ -1,21 +1,21 @@
 {
   "dependencies": {
-    "com.unity.2d.animation": "5.0.3",
-    "com.unity.2d.pixel-perfect": "4.0.1",
-    "com.unity.2d.psdimporter": "4.0.2",
+    "com.unity.2d.animation": "6.0.3",
+    "com.unity.2d.pixel-perfect": "5.0.0",
+    "com.unity.2d.psdimporter": "6.0.0-pre.2",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.2d.spriteshape": "5.1.0",
+    "com.unity.2d.spriteshape": "7.0.0-pre.2",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.collab-proxy": "1.3.9",
-    "com.unity.ide.rider": "3.0.4",
-    "com.unity.ide.visualstudio": "2.0.7",
+    "com.unity.collab-proxy": "1.5.7",
+    "com.unity.ide.rider": "3.0.7",
+    "com.unity.ide.visualstudio": "2.0.9",
     "com.unity.ide.vscode": "1.2.3",
-    "com.unity.test-framework": "1.1.22",
-    "com.unity.textmeshpro": "3.0.3",
-    "com.unity.timeline": "1.6.0-pre.1",
+    "com.unity.test-framework": "1.1.26",
+    "com.unity.textmeshpro": "3.0.6",
+    "com.unity.timeline": "1.6.0-pre.5",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "0.1.20-preview",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.5.1",
+    "com.unity.visualscripting": "1.7.2",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -26,6 +26,7 @@
     "com.unity.modules.imageconversion": "1.0.0",
     "com.unity.modules.imgui": "1.0.0",
     "com.unity.modules.jsonserialize": "1.0.0",
+    "com.unity.modules.nvidia": "1.0.0",
     "com.unity.modules.particlesystem": "1.0.0",
     "com.unity.modules.physics": "1.0.0",
     "com.unity.modules.physics2d": "1.0.0",
